# agent

./: README.md  agent.md  aigc.md  cc-switch.sh
.codex/: .env
agent-mail/: README.md
browser/: index.md
codex/: README.md
codex/docs/: agents.md  architecture.md  auth.md  build.md  cli-reference.md  config.md  contributing.md  hooks.md  install.md  mcp.md  open-source-fund.md  plugins.md  quickstart.md  skills.md  start.md  troubleshooting.md
lark-cli/: index.md
mdbook/: SKILL.md
mdbook/agents/: openai.yaml
mimocode/: README.md
mimocode/docs/: agents.md  cli-options.md  cli-subcommands.md  commands.md  config-files.md  config-overrides.md  custom-tools.md  env-vars.md  first-prompt.md  formatters.md  install.md  interaction.md  keybinds.md  lsp.md  mcp-servers.md  models-provider.md  models.md  modes.md  network.md  permissions.md  rules.md  sessions.md  share.md  skills.md  slash-commands.md  start.md  themes.md  tools.md  troubleshooting.md
nanobot/: README.md  channels.md  commands.md  config.md  message-processing.md  oom-crash-report.md  optimization-strategy.md  quick-start.md  troubleshooting.md
phone/: index.md
skills/disk-cleanup/: SKILL.md
skills/mdbook/: SKILL.md
software/: blender.md
swarm/: .env.example  .gitignore  HARNESS_CLUSTER_DESIGN.md  README.md  pyproject.toml  swarm.md
swarm/src/swarm/: __init__.py  cli.py  graph.py  model.py  state.py
swarm/tests/: test_routing.py
weclaw/: DOCS.md
workflow/: index.md
zeroclaw/: README.md  channels.md  commands.md  config.md  quick-start.md  security.md  troubleshooting.md
(+7 files in other folders)
